# pli-scraper

./: .gitignore  Cargo.toml  index.html  run_backend.sh  run_frontend.sh  verify_server.sh
.github/workflows/: deploy.yml
assets/: index-89g8XPB4.js  index-BeAnN-y3.css
ferret/: Cargo.toml
ferret/src/: lib.rs  parser.rs  walker.rs
ferret/src/analyzer/: mod.rs  stream.rs
ferret/src/exporter/: mod.rs
ferret/src/reporter/: mod.rs
ferret/src/wasm/: mod.rs  renderer.rs
ferret/templates/: graph_visualizer.html
ferret/tests/: integration_tests.rs  new_tests.rs
ferret/tests/fixtures/: attributes.html  broken_tags.html  deeply_nested.html  malformed.html  realistic_sample.html  realistic_sample.xml  script_style.html  unicode.html
ferret_server/: Cargo.toml
ferret_server/src/: main.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: Header.css  Header.tsx  MainContent.css  MainContent.tsx  Sidebar.css  Sidebar.tsx
scapi/: Cargo.toml  app.yaml  deploy.sh  wasmer.toml
scapi/src/: main.rs
