[workspace]
resolver = "2"

members = ["ferret", "scapi"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# HTTP client for URL fetching
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }

# XML/HTML Parsing
quick-xml = "0.31" # For StreamAnalyzer (streaming parser)
tl = "0.7.7"       # For StatsAnalyzer (in-memory DOM parser)

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# For batch/concurrent operations
futures = "0.3"

# utils
colored = "2"
indicatif = "0.17"
askama = { version = "0.12", features = ["serde-json"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# wasm
wasm-bindgen = "0.2"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
