[package]
name = "ferret"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quick-xml = "0.31"
tl = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
askama = { workspace = true }
reqwest = { workspace = true }
wasm-bindgen = { workspace = true }
colored = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "Text",
    "console",
]


[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
