[package]
name = "ferret_server"
version = "0.1.0"
edition = "2021"

[dependencies]
ferret = { path = "../ferret" }
hyper = { version = "0.14", features = ["full"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
